# audio-tools

./: .gitignore  BACKLOG.md  README.md  pyproject.toml  requirements.txt  setup.sh
docs/: DETECTION_NOTES.md
scripts/: analyze_clicks.py  analyze_repair.py  generate_test_fixtures.py
src/mastering_tools/: declick.py  loudness.py  stems.py
tests/: test_declick.py
