[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mastering-tools"
version = "0.1.0"
description = "CLI tools for music mastering workflow"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.20.0",
    "soundfile>=0.12.0",
]

[project.scripts]
declick = "mastering_tools.declick:main"
loudness = "mastering_tools.loudness:main"

[tool.setuptools.packages.find]
where = ["src"]
